Add: 8 guru-level specialist consultant profiles
- Created 8 missing specialist markdown files in team_config/07_specialists/:
  - performance_specialist.md (profiling, optimization: Python, Go, Rust, JS, C++)
  - cloud_specialist.md (AWS, GCP, Azure, K8s, Terraform, IaC)
  - architecture_specialist.md (system design, patterns, scalability)
  - database_specialist.md (PostgreSQL, MongoDB, Redis, query tuning)
  - frontend_specialist.md (React, TypeScript, Next.js, performance, a11y)
  - distributed_specialist.md (microservices, consistency, resilience)
  - data_specialist.md (Airflow, Spark, dbt, data warehousing)
  - mobile_specialist.md (iOS/Swift, Android/Kotlin, React Native)

- Each specialist is guru-level with:
  - Deep expertise in domain
  - Expert in 1+ programming languages
  - Teaching-focused approach with common scenarios
  - Knowledge transfer patterns

- Updated config.yaml:
  - Expanded from 5 to 10 documented specialist domains
  - Clarified guru-level expertise and language competencies

- Enhanced tests:
  - Added test_all_specialist_profiles_loadable() to verify all 10 profiles
  - Validates real profiles (not synthetic fallbacks)
  - All 7 specialist consultant tests passing

Total: 10 specialist profiles (2 existing + 8 new), all verified loadable

--- a/config.yaml
+++ b/config.yaml
@@ -417,15 +417,25 @@ models:
       max_tokens: 3072
 
 # =============================================================================
-# EXTERNAL CONSULTANTS (5 domains - NOT in config, created on-demand)
+# EXTERNAL CONSULTANTS (10 guru-level domains - NOT in config, created on-demand)
 # =============================================================================
 # Managed by SpecialistConsultantSystem (src/orchestrator/specialist_consultant.py)
-# Available domains (profiles in team_config/08_specialists/):
-#   - ml: Machine Learning / AI (training, deployment, debugging)
-#   - security: Auth, OWASP Top 10, secure coding
-#   - performance: Optimization, profiling, benchmarking
-#   - cloud: AWS, GCP, Azure, Kubernetes
-#   - architecture: System design, scalability, patterns
+# Available domains (curated profiles in team_config/08_specialists/):
+#   - ml: Machine Learning / AI (PyTorch, TensorFlow, MLOps, model debugging)
+#   - security: Authentication, OWASP Top 10, OAuth, secure coding, compliance
+#   - performance: Profiling, optimization (Python, Go, Rust, JS, C++), query tuning
+#   - cloud: AWS, GCP, Azure, Kubernetes, Terraform, CI/CD, observability
+#   - architecture: System design, microservices, scalability, design patterns
+#   - database: PostgreSQL, MongoDB, Redis, query optimization, schema design
+#   - frontend: React, TypeScript, Next.js, performance, accessibility
+#   - distributed: Microservices, consistency, Saga, circuit breaker, resilience
+#   - data: Data pipelines, Airflow, Spark, dbt, data warehousing
+#   - mobile: iOS (Swift/SwiftUI), Android (Kotlin/Compose), React Native
+#
+# Each specialist is:
+#   - Guru-level expertise in their domain
+#   - Expert in 1+ programming languages relevant to domain
+#   - Focused on teaching and knowledge transfer
 #
 # Constraints:
 #   - Max 3 consultations per sprint (hard limit)
